Version 0.5.1~dev

	* Added a savate(8) manpage.

Version 0.5.0 Released on 2012/10/23

	* httpkiller: fix a bug where a missing selector would create an
	  invalid request line.
	* Unknown Content-Type streams are now accepted and handled in a
	  generic way.
	* Fix the connect_ex() return value handling.
	* Burst size is now configurable.
	* Add a low-bitrate source type, useful to avoid timeouts on audio
	  streams.
	* Added basic support for shoutcast metadata relaying.
	* Added MP3 support.
	* Added AAC (ADTS) support.
	* Added on-demand relaying.
	* Added plugin possibility for statistics.
	* Added keepalive period for on-demand relaying.
	* Added client buffer queue sizes statistics to JSON status.
	* httpkiller: add --random-path option.
	* Properly handle HTTP HEAD requests for streams.
	* Properly handle parameters and query string in relay URLs.

Version 0.4.0 Released on 2011/11/22

	* Log requests like Apache's combined log format.
	* Add an HTTPResponse class to allow authentication error reason
	  improvements.
	* Return a 401 Unauthorized error when the request header doesn't
	  contain the authentication string.
	* Added experimental recvmmsg() support for MPEG-TS sources.
	* Clean up timeouts for a failed HTTP request.

Version 0.3.2 Released on 2011/09/30

	* looping.py: fix epoll detection.
	* binary_parser.py: allow our users not to provide a validating object.
	* BurstQueue: fix a bug in extend() in case the iterable is a
	  generator object.
	* Sources can now customise the size of the buffer passed to recv().

Version 0.3.1 Released on 2011/08/23

	* Added a --version command line switch.

Version 0.3.0 Released on 2011/07/12

	* Added a token-based (mod_auth_token-style) authorization handler.
	* Added reload capability.
	* Every client / source / relay now has an inactivity timeout.
	* UDP: delay source start until we've had at least a few packets
	  from the network.

Version 0.2.0 Released on 2011/05/24

	* Added graceful stop on SIGHUP.