@@ -1,6 +1,7 @@
 Version 0.5.1~dev
 
 	* Added a savate(8) manpage.
+	* Added a savate.json(5) manpage.
 
 Version 0.5.0 Released on 2012/10/23
 
